[package]
name = "ops_server"
version = "20.12.0"
authors = ["cannotilever"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
dns-lookup = "1.0.3"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
simplelog = "^0.8"
